Añadido una preferencia terminado listener y funciona boton opciones

--- a/app/src/main/res/xml/opciones.xml
+++ b/app/src/main/res/xml/opciones.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <PreferenceCategory android:title="@string/pref_control_juego_titulo">
+        <ListPreference
+            android:dialogTitle="@string/pref_control_juego_nombre"
+            android:entries="@array/pref_control_juego_entries"
+            android:entryValues="@array/pref_control_juego_values"
+            android:key="@string/pref_control_juego"
+            android:title="@string/pref_control_juego_nombre" />
+    </PreferenceCategory>
 </PreferenceScreen>
