--- a/app/src/main/res/xml/opciones.xml
+++ b/app/src/main/res/xml/opciones.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory android:title="@string/pref_control_juego_titulo">
         <ListPreference
             android:dialogTitle="@string/pref_control_juego_nombre"
             android:entries="@array/pref_control_juego_entries"
             android:entryValues="@array/pref_control_juego_values"
             android:key="@string/pref_control_juego"
+            android:summary="@string/pref_control_juego_summary"
             android:title="@string/pref_control_juego_nombre" />
+    </PreferenceCategory>
+    <PreferenceCategory android:title="@string/pref_musica_titulo">
+        <SwitchPreference
+            android:key="@string/pref_musica"
+            android:summaryOff="@string/pref_musica_summary_off"
+            android:summaryOn="@string/pref_musica_summary_on"
+            android:title="@string/pref_musica_titulo" />
+        <com.aitor1995.proyecto.preferences.NumberPickerPreference
+            android:dependency="@string/pref_musica"
+            android:key="@string/pref_valor_volumen"
+            android:title="@string/pref_valor_volumen_nombre"
+            app:max="100"
+            app:min="0" />
     </PreferenceCategory>
 </PreferenceScreen>
