--- a/app/src/main/res/xml/opciones.xml
+++ b/app/src/main/res/xml/opciones.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory android:title="@string/pref_control_juego_titulo">
         <ListPreference
-            android:defaultValue="tactil"
+            android:defaultValue="giroscopo"
             android:dialogTitle="@string/pref_control_juego_nombre"
             android:entries="@array/pref_control_juego_entries"
             android:entryValues="@array/pref_control_juego_values"
