--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -6,9 +6,13 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:layout_margin="40dp" />
+        android:layout_margin="60dp"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:background="@color/material_blue_grey_900"
+        android:alpha="0.7" />
 
 </FrameLayout>
